Minor visual updates

--- a/src/pages/transactions/report/report.scss
+++ b/src/pages/transactions/report/report.scss
@@ -31,4 +31,12 @@ page-report {
     letter-spacing: -0.1px;
     text-align: left;
   }
+  .dark-grey-text input {
+    font-size: 17px;
+    padding-right: 8px;
+    line-height: 1.29;
+    letter-spacing: -0.4px;
+    color: #687381;
+    text-transform: capitalize;
+  }
 }
