--- a/src/pages/transactions/transactions.scss
+++ b/src/pages/transactions/transactions.scss
@@ -116,6 +116,6 @@ page-transactions {
     font-size: 1rem;
   }
   .badge.margin {
-    margin: 0 0.6rem;
+    margin: 0 0.6rem 3px 0.6rem;
   }
 }
