--- a/src/pages/earning/earning.scss
+++ b/src/pages/earning/earning.scss
@@ -52,10 +52,10 @@ earning-home {
       }
       ion-label.label.label-md.amount {
         height: 41px;
-        font-family: SFProDisplay;
+        font-family: SFProText;
         text-align: center!important;
         font-size: 34px;
-        font-weight: bold;
+        // font-weight: bold;
         line-height: 1.21;
         letter-spacing: 0.4px;
         text-align: left;
